fix: scrollbar is no longer pushing content up in chrome

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
   display: flex;
   flex-direction: row;
   width: 70%;
-  height: 30vh;
   margin: auto;
 }
 /* end: main table */
@@ -49,6 +48,7 @@
   flex-direction: column;
   border-right: 1px solid rgba(0, 0, 0, 0.2);
   min-width: 14em;
+  height: 100%;
 }
 
 .value-section {
@@ -73,6 +73,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  height: 1em;
 }
 
 .table-cell:not(.title-container) {
@@ -93,6 +94,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  height: 100%;
   overflow-x: scroll;
 }
 
